<resources>
    <string name="app_name">RecsFromTechs</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="title">Recs From Techs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="loginUnsuccessful">Login was Unsuccessful</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="createuser">Create a Username</string>
    <string name="createpass">Create a Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="major">Enter Your Major</string>
    <string name="email">Enter Your Email</string>
    <string name="title_activity_volley_activity_test">VolleyActivityTest</string>
    <string name="movieSearch">Search</string>
    <string name="searchScreen">Search Screen</string>

    <string-array name="majors">
        <item>Select your Major</item>
        <item>Computer Science</item>
        <item>Mechanical Engineering</item>
        <item>Other</item>
        <item>LOL</item>
        <item>JK LOL</item>
    </string-array>
    <string name="title_activity_search__screen">search_Screen</string>
    <string name="title_activity_search_screen">searchScreen</string>
</resources>
